deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-demo
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: back-end
          image: 530379852691.dkr.ecr.us-east-2.amazonaws.com/litap-eventservice:latest
          ports:
            - containerPort: 8000
