service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-service
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
