ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-0c116c77fd82b76ac, subnet-0eb2f1a200eef6c71, subnet-00120e6ba1eb3b14b, subnet-0a0e89f602ad1b1b6
spec:
  rules:
  - http:
      paths:
      - path: /testpath
        backend:
          serviceName: event-service
          servicePort: 8080
